# cTorch

./: .buckconfig  .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  doxygen.config  echo  jemalloc_build.sh  travis.sh
.github/: stale.yml
cTorch/: .clang-format  BUCK  CMakeLists.txt  bit_array.c  bit_array.h  c_torch.h  common.c  common.h  config.c  config.h  consts.c  consts.h  debug_util.c  debug_util.h  engine.c  engine.h  generic_array.h  graph.c  graph.h  list_d.h  loader.h  logger_util.c  logger_util.h  mem_util.c  mem_util.h  node.c  node.h  operator.c  operator.h  ops_enabled.h  params.c  params.h  plan.c  plan.h  pool.c  pool.h  queue.c  queue.h  scheduler.c  scheduler.h  (+6 more)
cTorch/CMake/: README.md
cTorch/cTorch/CMake/: cTorchTargets.cmake
cTorch/include/: README.md  c_torch.h
cTorch/include/jemalloc/: jemalloc.h
cTorch/lib/: README.md  dev_lib_build.sh
cTorch/lib/protobuf/csharp/src/Google.Protobuf/: CodedInputStream.cs
cTorch/operators/: CMakeLists.txt  op_list.h  op_util.h
cTorch/operators/accelerate/: CMakeLists.txt
cTorch/operators/apple/: CMakeLists.txt  op_abs_apple.c  op_acos_apple.c  op_actan2_apple.c  op_actan_apple.c  op_asin_apple.c  op_ceil_apple.c  op_cos_apple.c  op_cosh_apple.c  op_div_apple.c  op_exp_apple.c  op_expm1_apple.c  op_floor_apple.c  op_fmod_apple.c  op_list_apple.c  op_list_apple.h  op_log10_apple.c  op_log1p_apple.c  op_log2_apple.c  op_log_apple.c  op_pow_apple.c  op_reciprocal_apple.c  op_remainder_apple.c  op_round_apple.c  op_rsqrt_apple.c  op_sin_apple.c  op_sinh_apple.c  op_sqrt_apple.c  op_tan_apple.c  op_tanh_apple.c  op_trunc_apple.c  util_apple.h
cTorch/operators/arm/: CMakeLists.txt  op_list_arm.h
cTorch/operators/cuda/: CMakeLists.txt  op_abs_cuda.cu  op_acos_cuda.cu  op_add_cuda.cu  op_asin_cuda.cu  op_atan2_cuda.cu  op_atan_cuda.cu  op_ceil_cuda.cu  op_cos_cuda.cu  op_cosh_cuda.cu  op_div_cuda.cu  op_erf_cuda.cu  op_erfc_cuda.cu  op_erfinv_cuda.cu  op_exp_cuda.cu  op_expm1_cuda.cu  op_floor_cuda.cu  op_fmod_cuda.cu  op_list_cuda.c  op_list_cuda.h  op_log10_cuda.cu  op_log1p_cuda.cu  op_log2_cuda.cu  op_log_cuda.cu  op_mul_cuda.cu  op_pow_cuda.cu  op_remainder_cuda.cu  op_round_cuda.cu  op_rsqrt_cuda.cu  op_sin_cuda.cu  op_sinh_cuda.cu  op_sqrt_cuda.cu  op_tan_cuda.cu  op_tanh_cuda.cu  op_trunc_cuda.cu  util_cuda.h
cTorch/operators/default/: CMakeLists.txt  op_ bitwise_not_default.c  op_Bilinear_default.c  op_ConstantPad1d_default.c  op_ConstantPad2d_default.c  op_ConstantPad3d_default.c  op_Conv1d_default.c  op_ELU_default.c  op_Hardshrink_default.c  op_Hardsigmoid_default.c  op_Hardswish_default.c  op_Hardtanh_default.c  op_LeakyReLU_default.c  op_Linear_default.c  op_LogSigmoid_default.c  op_MultiheadAttention_default.c  op_PReLU_default.c  op_ReLU6_default.c  op_ReLU_default.c  op_ReflectionPad1d_default.c  op_ReflectionPad2d_default.c  op_ReplicationPad1d_default.c  op_ReplicationPad2d_default.c  op_ReplicationPad3d_default.c  op_ZeroPad2d_default.c  op_abs_default.c  op_acos_default.c  op_add_default.c  op_addcdiv_default.c  op_addcmul_default.c  op_angle_default.c  op_argmax_default.c  op_argmin_default.c  op_asin_default.c  op_atan2_default.c  op_atan_default.c  op_bitwise_and_default.c  op_bitwise_not_default.c  op_bitwise_or_default.c  op_bitwise_xor_default.c  (+54 more)
cTorch/operators/mkl/: CMakeLists.txt  op_abs_mkl.c  op_acos_mkl.c  op_add_mkl.c  op_asin_mkl.c  op_atan2_mkl.c  op_atan_mkl.c  op_ceil_mkl.c  op_cos_mkl.c  op_cosh_mkl.c  op_div_mkl.c  op_erf_mkl.c  op_erfc_mkl.c  op_erfinv_mkl.c  op_exp_mkl.c  op_expm1_mkl.c  op_floor_mkl.c  op_fmod_mkl.c  op_frac_mkl.c  op_list_mkl.c  op_list_mkl.h  op_log10_mkl.c  op_log1p_mkl.c  op_log2_mkl.c  op_log_mkl.c  op_mul_mkl.c  op_pow_mkl.c  op_remainder_mkl.c  op_round_mkl.c  op_rsqrt_mkl.c  op_sin_mkl.c  op_sinh_mkl.c  op_sqrt_mkl.c  op_square_mkl.c  op_tan_mkl.c  op_tanh_mkl.c  op_trunc_mkl.c  util_mkl.h
cTorch/operators/openblas/: CMakeLists.txt  op_list.h
cTorch/operators/x86/: CMakeLists.txt  op_abs_x86.c  op_acos_x86.c  op_list.c  op_list.h  x86_common.h
cTorch/operators/x86/x86_haswell/: abs_op_x86_haswell.c
cTorch/src/: c_torch.h  common.c  common.h  consts.h  engine.c  engine.h  enums.h  graph.c  graph.h  list.h  list_d.h  loader.h  node.c  node.h  operator.c  operator.h  plan.c  plan.h  storage.c  storage.h
cTorch/src/backends/: backend.c  backend.h
cTorch/src/backends/accelerate/: accelerate.h
cTorch/src/backends/mkl/: mkl.h
cTorch/src/backends/openBLAS/: README.md  open_blas.h
ci/: README.md  aws_credential  aws_s3.sh  build_test.sh  build_test_arm.sh  (+5 more)
tests/: .gitignore  CMakeLists.txt  README.md  bit_array_test.cpp  cmmon_test.cpp  debug_util_test.cpp  generic_array_test.cpp  graph_test.cpp  list_d_test.cpp  logger_util_test.cpp  main.cpp  mem_util_test.cpp  node_test.cpp  operator_test.cpp  params_test.cpp  pool_test.cpp  scheduler_test.cpp  sharder_test.cpp  storage_test.cpp  test_graph.cpp  test_list.cpp  test_list_d.cpp  test_node.cpp  test_util.c  test_util.cpp  test_util.h  torch_util.cpp  torch_util.hpp
tests/ops/: Bilinear_op_test.cpp  ConstantPad1d_op_test.cpp  ConstantPad2d_op_test.cpp  ConstantPad3d_op_test.cpp  Hardsigmoid_op_test.cpp  Hardswish_op_test.cpp  Hardtanh_op_test.cpp  LeakyReLU_op_test.cpp  LogSigmoid_op_test.cpp  PReLU_op_test.cpp  ReLU6_op_test.cpp  ReLU_op_test.cpp  ReflectionPad1d_op_test.cpp  ReflectionPad2d_op_test.cpp  ReplicationPad1d_op_test.cpp  ReplicationPad2d_op_test.cpp  ReplicationPad3d_op_test.cpp  ZeroPad2d_op_test.cpp  abs_op_test.cpp  acos_op_test.cpp  add_op_test.cpp  addcdiv_op_test.cpp  addcmul_op_test.cpp  angle_op_test.cpp  argmax_op_test.cpp  argmin_op_test.cpp  asin_op_test.cpp  atan2_op_test.cpp  atan_op_test.cpp  bitwise_and_op_test.cpp  bitwise_not_op_test.cpp  bitwise_or_op_test.cpp  bitwise_xor_op_test.cpp  ceil_op_test.cpp  clamp_op_test.cpp  cos_op_test.cpp  cosh_op_test.cpp  digamma_op_test.cpp  dist_op_test.cpp  div_op_test.cpp  (+43 more)
tests/ops/pytests/: .gitignore  README.md  cffi_def.py  cffi_util.py  test_cffi.py
(+1174 files in other folders)
